--- a/_includes/staff.html
+++ b/_includes/staff.html
@@ -29,7 +29,9 @@
                                     {{ person.sub_heading }}
                                 </div>{% endif %}
                                 <p>
-                                    {{ person.content | truncatewords: 25, "...<br><br>Continue reading →" }}
+                                    {{ person.content }}
+                                                     
+<!--                                     {{ person.content | truncatewords: 25, "...<br><br>Continue reading →" }} -->
                                 </p>
                             </div>
                         </div>
